syntax = "proto3";

package team.brown.sharding.storage.proto;

option java_package = "team.brown.sharding.storage.proto";
option java_multiple_files = true;

message MigrateDataChunk {
  map<string, string> data = 1;
  int32 version = 2;
}

message MigrateDataResponse {
  bool success = 1;
}

service MigrationGrpcService {
  rpc MigrateData(stream MigrateDataChunk) returns (MigrateDataResponse);
}
